# LobePrior

./: .gitignore  LOCCA_README.md  README.md  dataModule.py  dataset.py  hatch_build.py  install.sh  lightning.py  lightning_7_decoders.py  main.py  predict.py  predict_6_normal.py  predict_7_decoders_complete.py  predict_decoders.py  predict_lung.py  predict_lung_completo.py  predict_lung_register.py  predict_normal.py  pyproject.toml  register_template.py  requirements.txt  setup.py
model/: BB_Unet_3D.py  BB_Vnet_3D.py  BB_unet3d_pytorch.py  build_model.py  m3DUNet.py  unet3d_pytorch.py  unet_diedre.py  unet_grid_attention_3D.py
model/residual_unet/: residual_unet.py
src/: dataModule.py  dataset.py  lightning_7_decoders.py  predict.py  predict_decoders.py  predict_lung.py  predict_lung_register.py  predict_normal.py
src/utils/: general.py  transform3D.py
utils/: general.py  loss.py  metric.py  post_processed_3D.py  seg_metrics.py  show_images.py  to_onehot.py  transform.py  transform3D.py  transform_monai.py  transforms_nnunet.py  unified_img_reading.py  unified_img_reading_resample.py  unified_img_reading_with_lungmask.py  visualize.py
